# edlines_line_segment_detection

./: .gitignore  CMakeLists.txt  README.md  edlines.h  test  test.cpp  test_a15
array/: Array.h
array/Array/: ArrayDefinitions.h
c66/: VXLIB_bufParams.h  VXLIB_sobel_3x3_i8u_o16s_o16s.c  VXLIB_sobel_3x3_i8u_o16s_o16s.h  VXLIB_sobel_3x3_i8u_o16s_o16s_cn.c  VXLIB_sobel_3x3_i8u_o16s_o16s_cn.h  VXLIB_types.h
c66/VXLIB_sobel_3x3_i8u_o16s_o16s_66_LE_ELF/: .ccsproject  .cproject  .project  macros.ini
edlines/: edlines.cpp  edlines.h  test  test.cpp
